--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.3.3"
+    "nuxt": "^3.3.3",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "firebase": "^9.19.1",
