--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "nuxt": "^3.3.3",
+    "prettier": "^2.8.7",
     "typescript": "^5.0.4"
   },
   "dependencies": {
