--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
+    "jsonwebtoken": "^9.0.0",
     "sass": "^1.62.0"
   }
 }
