--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
     "jsonwebtoken": "^9.0.0",
